--- a/AppFreeMarket/Templates/searchDelivery.html
+++ b/AppFreeMarket/Templates/searchDelivery.html
@@ -9,6 +9,8 @@
 <body>
     <form action="/AppFreeMarket/search/" method="GET">
         <input type="number" name='delivery' id='delivery'>
+
+        <input type="submit" valor='Search'>
     
     </form>
     
