--- a/AppFreeMarket/Templates/buyer.html
+++ b/AppFreeMarket/Templates/buyer.html
@@ -6,13 +6,13 @@
 
     <!-- changing-->
     {% if myForm.errors %}
-    <p style="color:red;"> Wrong data. Please check</p>
+    <p style="color:red;"> Wrong data. Please check.</p>
     {% endif %}
 
-    <form action="" method="POST">% csrf_token %
+    <form action="" method="POST">{% csrf_token %}
 
         </table>
-            {{myForm.as-table}}
+            {{myForm.as_table}}
         </table>
 
         <input type="submit" value="send">
