--- a/AppFreeMarket/Templates/home.html
+++ b/AppFreeMarket/Templates/home.html
@@ -9,7 +9,7 @@
     <p>Looking for: {{delivery}}</p>
     
     <ul>
-        {% for po in delivery %}
+        {% for product in delivery %}
             <li> {{delivery.name}}</li>
             <li> {{delivery.number}}</li>
         {% endfor %}
