SearchResults.html fixed

--- a/AppFreeMarket/Templates/searchDelivery.html
+++ b/AppFreeMarket/Templates/searchDelivery.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/AppFreeMarket/search/" method="GET">
+    <form action="" method="GET">
         <input type="number" name='delivery' id='delivery'>
 
         <input type="submit" valor='Search'>
