--- a/AppFreeMarket/Templates/searchDelivery.html
+++ b/AppFreeMarket/Templates/searchDelivery.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="GET">
-        <input type="number" name='delivery' id='delivery'>
+    <form action="/AppFreeMarket/search/" method="GET">
+        <input type="number" name='number' id='number'>
 
         <input type="submit" valor='Search'>
     
