--- a/AppFreeMarket/Templates/searchResults.html
+++ b/AppFreeMarket/Templates/searchResults.html
@@ -7,19 +7,19 @@
     <title>Document</title>
 </head>
 <body>
- <h2>Search Results:</h2>
+    <h2>Search Results:</h2>
  
- {% if product %}
+     {% if products %}
 
- <ul>
-    {% for product in products %}
-        <li>{{products.name}}</li>
-        <li>{{products.number}}</li>
-    {% endfor %}
+    <ul>
+        {% for product in products %}
+            <li>{{product.name}}</li>
+            <li>{{product.number}}</li>
+        {% endfor %}
 
- </ul>
+    </ul>
 
- {% endif %}
+    {% endif %}
 
 </body>
 </html>
